# django-djazz-test

./: .readthedocs.yml  mkdocs.yml  pyproject.toml
docs/: configuration.md  dj-cli.md  file-structure.md  generating-project.md  index.md  installation.md  quality-assurance.md  settings.md  terminology.md  third-parties.md
docs/css/: dango-jazz.css
project/.envs/: .env.app.jinja  .env.postgres.jinja
requirements/: docs.txt
